@@ -1,11 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.27 2005/01/07 07:02:47 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.28 2005/01/07 07:38:07 codeman Exp $
 
 *GLI-0.01 (9 Feb 2004)
 
   07 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
   Initial move of partitioning code from ArchTemplate to x86Template.
+  forgot about the set_root_password
 
   07 Jan 2005; Preston Cody <codeman@gentoo.org>
   Added grp_install and services to InstallProfile
